--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,15 +43,19 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   json_theme: ^9.0.1+2
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   pinput: ^5.0.1
   im_stepper: ^1.0.1+1
+  freezed_annotation: ^3.1.0
+  stac: ^0.11.0
  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.6
+  build_runner: ^2.4.15
+  freezed: ^3.1.0
+  json_serializable: ^6.9.5
   json_dynamic_widget_codegen: ^3.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -74,7 +78,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/json/json_dynamic_widget/
+    - assets/images/
+    - assets/json/stac_json/
+    - assets/fonts/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
