--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   im_stepper: ^1.0.1+1
   freezed_annotation: ^3.1.0
   stac: ^0.11.0
+  smart_stepper: ^0.0.5
+  flutter_bloc: ^9.1.1
+  dashed_circular_progress_bar: ^0.0.6
  
 
 dev_dependencies:
